--- a/html-content/02-html-style/css/site-style.css
+++ b/html-content/02-html-style/css/site-style.css
@@ -1,5 +1,11 @@
 /* This file will contain all the styling for our demo */
 
+body {
+    font-family: "Kanit", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
 /*
     CSS rules are outlined like this
     [Selector] {property:value; property:value;}
